public/common/eventDetails.css
.grid-controls {
    display: flex;
    gap: var(--small-gap);
}

.team-member-mini-card i#teamMiniAddButton {
    display: none;
}

.team-member-mini-card:hover {
    background-color: var(--primary-bg);
}

.event-controls {
    display: flex;
    gap: var(--small-gap);
}

.team-members {
    box-sizing: border-box;
    display: flex;
    flex-direction: column;
    gap: var(--medium-gap);
}

#details-top-box {
    font-size: 1.5rem;
}

.event-details {
    display: flex;
    flex-direction: column;
    box-shadow: 0 4px 8px rgba(0,0,0,0.1);
    z-index: 10;
    padding: var(--container-padding);
    background-color: var(--card-bg);
    gap: var(--small-gap);
}

#details-edit-button {
    margin-left: auto; 
    margin-right: 0;
}

.choice-buttons {
    gap: var(--small-gap);
    display: flex; 
    align-items: center;
}

#details-choices {
    margin-left: auto; 
    margin-right: 0;
}

#attendance-check-button {
    width: fit-content;
}

.attendance-button-wrap {
    display: flex;
    justify-content: flex-end;
}

#attendance-check-button {
    width: 100%
}

@media screen and (max-width: 800px) {
    .event-controls {
        gap: var(--small-gap);
        flex-wrap: wrap;
        justify-content: space-between;
    }

    .event-details {
        display: flex;
        flex-direction: column;
        box-shadow: 0 4px 8px rgba(0,0,0,0.1);
        z-index: 10;
        padding: var(--container-padding);
        background-color: var(--card-bg);
        gap: var(--big-gap);
    }

    .event-box-top span {
        font-size: 1.2rem;
    }

    .event-box-bottom span {
        font-size: 0.8rem;
    }

    .search-bar {
        padding: 0.3rem;
        width: 100%;
        height: fit-content;
    }

    #searchInput::placeholder {
        font-size: 0.7rem;
    }

    .grid-container {
        gap: var(--medium-gap);
    }

    .choice-buttons {
        justify-content: center;
        width: 100%;
    }
    
    #details-choices {
        margin-left: 0;
        margin-right: 0;
        justify-content: center;
    }

    .event-controls {
        gap: var(--small-gap);
        flex-wrap: nowrap;
        justify-content: flex-end;
    }

    .container {
        padding: 2rem 0;
    }
}

